--- a/healers.html
+++ b/healers.html
@@ -12,8 +12,8 @@
         <header>
             <img src="cactus.png" alt="logo"></a>
             <nav>
-                <a href="starter.html">Домашняя страница</a>
-                <a href="#contacts">Контакты</a>
+                <a href="index.html">Домашняя страница</a>
+                <a href="index.html#contacts">Контакты</a>
                 <a href="care.html">Как выбрать домашнее растение?</a>
                 <a href="language.html">Язык цветов</a>
                 <div class="dropdown">
