--- a/healers.html
+++ b/healers.html
@@ -11,19 +11,17 @@
     <body>
         <header>
             <img src="cactus.png" alt="logo"></a>
-            <nav>
-                <a href="index.html">Домашняя страница</a>
-                <a href="index.html#contacts">Контакты</a>
-                <a href="care.html">Как выбрать домашнее растение?</a>
-                <a href="language.html">Язык цветов</a>
-                <div class="dropdown">
-                    <a>Виды растений</a>
+                <nav><a href="starter.html">Домашняя страница</a></nav>
+                <nav><a href="#contacts">Контакты</a></nav>
+                <nav><a href="care.html">Как выбрать домашнее растение?</a></nav>
+                <nav><a href="language.html">Язык цветов</a></nav>
+                <nav><div class="dropdown">
+                <a>Виды растений</a></nav>
                     <div class="dropdown-content">
                       <a href="healers.html">Лекарственные</a>
                       <a href="cacti.html">Кактусы</a>
                       <a href="flowery.html">Цветущие</a>
                   </div>
-            </nav>
         </header>
 
             <h2><center>Лекарственные растения</center></h2>
