--- a/language.html
+++ b/language.html
@@ -18,7 +18,7 @@
                 <nav><a href="contacts.html">О сайте</a></nav>
         </header>
         
-        <section>
+        <div class="sec3">
             <h2>Немного о языке цветов:</h2>
             <div class="sec2">
         <p><b>Флориография (язык цветов)</b> — символика, значение, придаваемое различным цветам для выражения тех или иных настроений, чувств и идей. В Викторианскую эпоху язык цветов использовали для тайного выражения чувств, в тех случаях, когда о них нельзя было говорить открыто.</p>
@@ -70,7 +70,7 @@
         
         <h3 id="с">Сирень</h3>
         <p>Красота, влюбленность, первые волнения любви.</p>
-        </section>
+    </div>
 
         <div class="main_cont">
             <div>
