--- a/language.html
+++ b/language.html
@@ -24,9 +24,9 @@
         <p><b>Флориография (язык цветов)</b> — символика, значение, придаваемое различным цветам для выражения тех или иных настроений, чувств и идей. В Викторианскую эпоху язык цветов использовали для тайного выражения чувств, в тех случаях, когда о них нельзя было говорить открыто.</p>
         <p>Язык цветов может быть реализован как с помощью использования разноцветных предметов, раскраски объектов, так и путём создания цветочных композиций из живых растений — букетов, венков и т. п.</p>
         </div>
-        <h2>Значения некоторых цветков: </h2>
+        <h2>Значения некоторых цветков </h2>
         <p>Названия отсортированы по алфавиту: </p>
-        <a href="#а">А</a> <a href="#в">В</a> <a href="#г">Г</a>  <a href="#д">Д</a>  <a href="#ж">Ж</a>  <a href="#и">И</a>  <a href="#к">К</a>  <a href="#л">Л</a>  <a href="#м">М</a>  <a href="#н">Н</a> <a href="#о">О</a> <a href="#п">П</a> <a href="#с">С</a>
+        <p><a href="#а">А</a> <a href="#в">В</a> <a href="#г">Г</a>  <a href="#д">Д</a>  <a href="#ж">Ж</a>  <a href="#и">И</a>  <a href="#к">К</a>  <a href="#л">Л</a>  <a href="#м">М</a>  <a href="#н">Н</a> <a href="#о">О</a> <a href="#п">П</a> <a href="#с">С</a></p>
 
         <h3 id="а">Aзалия</h3>
         <p>Символ женственности, хрупкости, кротости, сдержанности, преданности; но в то же время - страсти и печали. Азалию принято дарить перед нежеланной разлукой. Преподнося азалию, Вы говорите "Я надеюсь, Ты дождешься меня", "Береги себя для меня", "Я верю Тебе!". Когда мужчина дарит этот цветок - он признается, что Вы для него - единственная.</p>
