--- a/contacts.html
+++ b/contacts.html
@@ -24,7 +24,7 @@
 
             <div class="head">
                 <center><div class="countdown"><h2>О нас</h2></div></center>
-                <center><p>Добро пожаловать на сайт Houseplants»! Наш сайт посвящен домашним растениям и цветам, и создан для всех, кто увлекается растениеводством! Нам очень важна обратная связь, поэтому будем признательны, если Вы оставите свой отзыв в расположенной ниже форме, чтобы мы могли становиться лучше с каждым днем:</p></center>
+                <center><p>Добро пожаловать на сайт "Houseplants"! Наш сайт посвящен домашним растениям и цветам, и создан для всех, кто увлекается растениеводством! Нам очень важна обратная связь, поэтому будем признательны, если Вы оставите свой отзыв в расположенной ниже форме, чтобы мы могли становиться лучше с каждым днем:</p></center>
             </div>
 
         <div class="mails">
