--- a/language.html
+++ b/language.html
@@ -72,6 +72,6 @@
         <p>Красота, влюбленность, первые волнения любви.</p>
     </div>
 
-        <div class="main_cont">
-            <div>
+    <center><img src="flowers.png" width="400" height="400" class="responsive2"></center>
+        
     </body>
