--- a/contacts.html
+++ b/contacts.html
@@ -29,7 +29,7 @@
 
         <div class="mails">
             <div class="countdown"><h2><center>Наши контакты</center></h2></div>
-            <center><u>Номер телефона: +7-(903)-200-70-13</u></center>
+            <center><u>Номер телефона: <a href="tel:+7-(903)-200-70-13">+7-(903)-200-70-13</a></u></center>
             <center><u>Почта: phiru@inbox.ru</u></center>
             <center><u>Telegram: @qurmathe</u></center>
         </div>
