--- a/care.html
+++ b/care.html
@@ -5,19 +5,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Houseplants</title>
-        <link rel="shortcut icon" href="cactus.png" type="image/x-icon">
+        <link rel="shortcut icon" href="img/cactus.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            <img src="cactus.png" alt="logo"></a>
+            <img src="img/cactus.png" alt="logo"></a>
                 <nav><a href="index.html">Домашняя страница</a></nav>
                 <nav><a href="care.html">Как выбрать домашнее растение?</a></nav>
                 <nav><a href="language.html">Язык цветов</a></nav>
                 <nav><a href="types.html">Виды растений</a></nav>
                 <nav><a href="contacts.html">О сайте</a></nav>
         </header>
-
 
         <h2><center>Как выбрать комнатные растения: 5 вопросов и ответов для верного выбора </center></h2>
         
