--- a/language.html
+++ b/language.html
@@ -5,12 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Houseplants</title>
-        <link rel="shortcut icon" href="cactus.png" type="image/x-icon">
+        <link rel="shortcut icon" href="img/cactus.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            <img src="cactus.png" alt="logo"></a>
+            <img src="img/cactus.png" alt="logo"></a>
                 <nav><a href="index.html">Домашняя страница</a></nav>
                 <nav><a href="care.html">Как выбрать домашнее растение?</a></nav>
                 <nav><a href="language.html">Язык цветов</a></nav>
@@ -72,6 +72,6 @@
         <p>Красота, влюбленность, первые волнения любви.</p>
     </div>
 
-    <center><img src="flowers.png" width="400" height="400" class="responsive2"></center>
+    <center><img src="img/flowers.png" width="400" height="400" class="responsive2"></center>
         
     </body>
