--- a/types.html
+++ b/types.html
@@ -5,12 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Houseplants</title>
-        <link rel="shortcut icon" href="cactus.png" type="image/x-icon">
+        <link rel="shortcut icon" href="img/cactus.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            <img src="cactus.png" alt="logo"></a>
+            <img src="img/cactus.png" alt="logo"></a>
                 <nav><a href="index.html">Домашняя страница</a></nav>
                 <nav><a href="care.html">Как выбрать домашнее растение?</a></nav>
                 <nav><a href="language.html">Язык цветов</a></nav>
@@ -23,7 +23,6 @@
 
         <div class="main_cont">
             
-
             <section class="sec1">
                 <h2><center>Фиалки</center></h2>
                 <p>Фиалка, или сенполия – род травянистых красивоцветущих комнатных растений семейства Геснериевые. Выращивать фиалки в квартире достаточно просто, даже начинающий любитель растений вряд ли столкнется со сложностями при уходе. Многие цветоводы содержат в своих домах целые коллекции, поскольку видов и сортов фиалок огромное множество. Условия содержания любого вида фиалок – одинаковое, что значительно облегчает сам процесс выращивания и создания композиций из различных видов этих прекрасных цветов.</p>
