--- a/contacts.html
+++ b/contacts.html
@@ -5,13 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Houseplants</title>
-        <link rel="shortcut icon" href="cactus.png" type="image/x-icon">
+        <link rel="shortcut icon" href="img/cactus.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
         <script src="jquery.js"></script>
     </head>
     <body>
         <header>
-            <img src="cactus.png" alt="logo"></a>
+            <img src="img/cactus.png" alt="logo"></a>
                 <nav><a href="index.html">Домашняя страница</a></nav>
                 <nav><a href="care.html">Как выбрать домашнее растение?</a></nav>
                 <nav><a href="language.html">Язык цветов</a></nav>
@@ -19,8 +19,6 @@
                 <nav><a href="contacts.html">О сайте</a></nav>
         </header>
     <main>
-
-            <!-- <div class="countdown"><h2><center>О сайте</center></h2></div> -->
 
             <div class="head">
                 <center><div class="countdown"><h2>О нас</h2></div></center>
@@ -61,7 +59,6 @@
                   <span class="countdown-text">Секунды</span>
                 </div>
             </div>
-    <!-- </div> -->
     </main>
 
         <script src="script.js"></script>
